--- a/index.html
+++ b/index.html
@@ -19,11 +19,46 @@
     <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
 
 </p>
-<a class="link_batton" href="https://www.linkedin.com/in/rajibsarkar074/">HIRE ME</a>
+<a target="_blank" class="link_batton" href="https://www.linkedin.com/in/rajibsarkar074/">HIRE ME</a>
     </div>
     <div class="hafe_width">
         <img src="images/my-bg.png" alt="RAJIB">
     </div>
+   </section>
+   <section class="dream_big">
+    <div class="hafe_width">
+        <img src="images/my-bg2.png" alt="RAJIB">
+    </div>
+    <div class="hafe_width">
+        <h1>Dream Big</h1>
+        <h2>Become a web Developer
+        </h2>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a target="_blank" class="link_batton" href="https://drive.google.com/file/d/1QdVJjsir4CFJ0TYcl9yONG_Z-VHu_d5N/view?usp=share_link">DOWNLODE RESUME</a>
+    </div>
+   </section>
+   <section class="">
+    <h1>Experiences</h1>
+    <div class="">
+        <h2>
+            Full Stack Developer
+        </h2>
+        <h3>2024-Present | Pro Level Developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+
+        </p>
+    </div>
+    <div class="">
+        <h2>
+            Baby Web Developer
+        </h2>
+        <h3>2022-2024 | Hero Learner
+        </h3>
+        <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+
+        </p>
+    </div>
+
    </section>
 
 
