--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section class="top_banner">
+   <section class="top_banner flax_conteiner">
     <div class="hafe_width">
         <h1>Welcome To</h1>
     <h1> <span class="color_name"> RAJIB SARKAE </span>World!</h1>
@@ -25,7 +25,7 @@
         <img src="images/my-bg.png" alt="RAJIB">
     </div>
    </section>
-   <section class="dream_big">
+   <section class="dream_big flax_conteiner">
     <div class="hafe_width">
         <img src="images/my-bg2.png" alt="RAJIB">
     </div>
@@ -37,34 +37,32 @@
         <a target="_blank" class="link_batton" href="https://drive.google.com/file/d/1QdVJjsir4CFJ0TYcl9yONG_Z-VHu_d5N/view?usp=share_link">DOWNLODE RESUME</a>
     </div>
    </section>
-   <section class="">
-    <h1>Experiences</h1>
-    <div class="">
-        <h2>
-            Full Stack Developer
-        </h2>
-        <h3>2024-Present | Pro Level Developer</h3>
-        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
-
-        </p>
-    </div>
-    <div class="">
-        <h2>
-            Baby Web Developer
-        </h2>
-        <h3>2022-2024 | Hero Learner
-        </h3>
-        <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
-
-        </p>
-    </div>
-
-   </section>
-
-
-
-
-
+   <section>
+    <h2 class="experiences">Experiences</h2>
+    <div class="experiences_item flax_conteiner">
+        <div class="experiences_item1">
+            <h2>
+                Full Stack Developer
+            </h2>
+            <h3 class="color_name">2024-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
     
+            </p>
+        </div>
+        <div class="experiences_item2">
+            <h2>
+                Baby Web Developer
+            </h2>
+            <h3 class="color_name">2022-2024 | Hero Learner
+            </h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+    
+            </p>
+        </div>
+    </div>
+   </section>    
 </body>
+<footer>
+    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+</footer>
 </html>
